--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hielo by TEMPLATED</title>
+		<title>Blog Amandine</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,6 +22,7 @@
 						<li><a href="index.html" class="active">Acceuil</a></li>
 						<li><a href="#">Sujets</a></li>
 						<li><a href="#">Recherche approfondie</a></li>
+						<li><a href="datas.php">Gestion des données</a></li>
 						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
